<?xml version="1.0" encoding="utf-8"?>
<!-- TO USE THE DESIGN FEATURE WE NEED TO COMMENT OUT THE DRAWER LAYOUT BELOW -->
<!-- BEFORE RUNNING THE APP, MAKE SURE TO UNCOMMENT THE DRAWER LAYOUT BELOW -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_register"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".AddJournal">

<!-- UNCOMMENT THIS TO USE THE DESIGN FEATURE OTHERWISE YOU WONT SEE WHAT YOU'RE DRAGGING TO THE SCREEN -->
<!-- COMMENT OUT THIS CONSTRAINT LAYOUT BEFORE RUNNING THE APP -->

<!--    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:gravity="center"-->
<!--        tools:context=".AddJournal">-->

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/create_new_journal_entry"
        android:textColor="#e9eef2"
        android:textSize="34sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

        <Button
            android:id="@+id/submit_journal_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journal_body"
            app:layout_constraintVertical_bias="0.342" />

        <EditText
            android:id="@+id/journal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/enter_journal_title"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_details"
            app:layout_constraintVertical_bias="0.029"
            android:autofillHints="" />

        <EditText
            android:id="@+id/journal_body"
            android:layout_width="352dp"
            android:layout_height="230dp"
            android:ems="10"
            android:hint="@string/journal_here"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.467"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- COMMENT THIS BLOCK TO USE THE DESIGN FEATURE -->
<!-- UNCOMMENT THIS BLOCK BEFORE RUNNING THE APP -->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>
